# Aski_System

./: .gitignore  CMakeLists.txt  README.md
include/: AskiSystem.h  DatabaseManager.h  Question.h  User.h
src/: AskiSystem.cpp  DatabaseManager.cpp  main.cpp
